@@ -5,7 +5,9 @@
 <title>PostCanal</title>
 <script type="text/javascript" src="/jquery/jquery-1.3.2.min.js"></script>
 <script type="text/javascript" src="/jquery/jquery-ui-1.7.1.custom.min.js"></script>
+<?php if($this->request()->getAction()=='index') : ?>
 <script type="text/javascript" src="/fckeditor/fckeditor.js"></script>
+<?php endif ?>
 <?php B_Helper::style("application.css") ?>
 <?php B_Helper::script("application.js") ?>
 <?php $this->renderLayout('css', true) ?>
