@@ -80,5 +80,6 @@ HORAS TRABALHADAS: 7h
 
 - inclusao de botao excluir item do queue
 - bugfixes
+- exibicao de conteudo de um item do queue
 
-HORAS TRABALHADAS: 2h
+HORAS TRABALHADAS: 4h
